package penjualandetil.command;

public interface Command {
    void execute() throws Exception;
}